[tool.poetry]
name = "bang"
version = "0.1.0"
description = ""
authors = ["Kotaz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^24.2.0"
questionary = "^2.0.1"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
